อัปเดต real.sqlite3, example.sqlites3 และ course_list_plo.html

--- a/table/templates/table/course_list_plo.html
+++ b/table/templates/table/course_list_plo.html
@@ -83,7 +83,7 @@
             </tr>
             {% empty %}
             <tr>
-                <td colspan="4">ไม่พบรายวิชาที่ตรงกับ PLO นี้ในปีที่ {{ semester }}</td>
+                <td colspan="4">ไม่พบรายวิชาที่ตรงกับ PLO นี้ในปีที่ {{ semester_str }}</td>
             </tr>
             {% endfor %}
         </tbody>
